objects/APTS_Configurator_Access_Management__c.object
<CustomObject>
    <description>Object to enable administration of the users and their access to particular configurators.</description>
    <fields>
        <fullName>APTS_Access_Level__c</fullName>
        <label>Access Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Configurator_Access__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Configurator Access</label>
        <referenceTo>APTS_Configurator_Admin__c</referenceTo>
        <relationshipLabel>Configurators Access Management</relationshipLabel>
        <relationshipName>Configurators_Access_Management</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Configurator_Assignee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Configurator Assignee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Configurators_Access_Management</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Configurator Access Management</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>APTS_Configurator_Assignee__c</columns>
        <columns>APTS_Configurator_Access__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>User_Records</fullName>
        <columns>NAME</columns>
        <columns>APTS_Configurator_Access__c</columns>
        <columns>APTS_Configurator_Assignee__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APTS_Configurator_Assignee__c</field>
            <operation>contains</operation>
            <value>Rajiv</value>
        </filters>
        <label>User Records</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CAM-{0000000000}</displayFormat>
        <label>Configurator Access Management Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Configurators Access Management</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>